--- a/Articles/VECM/tabs/EmpiricalMotivation.tex
+++ b/Articles/VECM/tabs/EmpiricalMotivation.tex
@@ -16,7 +16,7 @@
     \textcite{gauger_residential_2003} & US (1959-79 and 1982-99) & VECM and Granger test & $M2, GDP(+), SINT(-), MR(-)$\\\hline
     \textcite{arestis_residential_2015} & 17 OECD countries (1970-2013) & ARDL Model & \makecell{$RHP(+), RDY(-), LRINT(-),$\\$ Cr(+), UN(-)$}\\\hline
     \textcite{kohlscheen_2018_Residential} & 15 OECD countries (1970-2017) & OLS & \makecell{$Q(+), RHP(+), GDPc(+),$\\$ POP(+), NM(+), H(-)$} \\\hline
-    \textcite{fair_macroeconometric_2018} & US (1954-2007 and 195-2015) & 2SOLS & \makecell{$AGs(\pm), RDY(+), H(-),$\\$ NMRA(-), NHW(+)$} \\\hline
+    \textcite{fair_macroeconometric_2018} & US (1954-2007 and 195-2015) & FIML and 3SOLS & \makecell{$AGs(\pm), RDY(+), H(-),$\\$ NMRA(-), NHW(+)$} \\\hline
     \hline
     \end{tabularx}
     % \end{tabular}
