--- a/Articles/VECM/tabs/hypothesis.tex
+++ b/Articles/VECM/tabs/hypothesis.tex
@@ -12,25 +12,25 @@
 			\textbf{Econometric Meaning} &
 			\textbf{Economic Meaning} \\ \hline\hline
 			\textbf{1. $\varepsilon \sim I(0)$} &
-			\begin{tabular}[c]{@{}l@{}} Stationary residuals indicates cointegration relationship\end{tabular} &
-			\begin{tabular}[c]{@{}l@{}} Series share a common\\long-run trend\end{tabular} \\ \hline
+			\begin{tabular}[c]{@{}l@{}} Stationary residuals indicates\\cointegration relationship\end{tabular} &
+			\begin{tabular}[c]{@{}l@{}} Series share a common long-run trend\end{tabular} \\ \hline
 			\textbf{2. $\alpha_1 = 0$} &
 			\begin{tabular}[c]{@{}l@{}} $own$ is weakly exogenous\\ compered to $g_{I_h}$\end{tabular} & \begin{tabular}[c]{@{}l@{}} 
 				$own$ dynamics is not affected\\by previous equilibrium deviation\end{tabular}
 			\\ \hline
 			\textbf{3. $\alpha_2 < 0$} &
-			\begin{tabular}[c]{@{}l@{}}residential investment growth rate is not weakly exogenous\\
-				compared to houses-own rate of interest\end{tabular} & \begin{tabular}[c]{@{}l@{}} $g_{I_h}$ dynamics is affected\\ by previous equilibrium deviation\end{tabular}
+									\begin{tabular}[c]{@{}l@{}}Residential investment growth rate is not weakly\\
+									  exogenous compared to houses-own rate of interest\end{tabular} & \begin{tabular}[c]{@{}l@{}} $g_{I_h}$ dynamics is affected\\ by previous equilibrium deviation\end{tabular}
 			\\ \hline
 			\textbf{4. $\phi_1 < 0$} &
 			\begin{tabular}[c]{@{}l@{}}Series share a common\\negative long-run relationship\end{tabular} &
 			\begin{tabular}[c]{@{}l@{}}houses own-rate of interest affects\\residential investment growth rate negatively\end{tabular} \\ \hline
 			\textbf{5. $\phi_0 > 0$} &
 			\begin{tabular}[c]{@{}l@{}}
-			Non price related real estate\\demand is statistically significant
+			Non houses-own interest rate related\\residential investment is statistically significant
 			\end{tabular} &
 			\begin{tabular}[c]{@{}l@{}}
-				Real estate demand associated with\\institutional particularities and demographic\\ changes affects residential investment\\growth rate positively\end{tabular} \\ \hline
+				Residential investment associated with\\institutional particularities and demographic\\ changes affects residential investment\\growth rate positively\end{tabular} \\ \hline
 			\textbf{6. $\gamma_{2,is} < 0$} &
 			\begin{tabular}[c]{@{}l@{}}Residential investment growth rate\\coefficient is statistically significant\end{tabular} &
 			\begin{tabular}[c]{@{}l@{}}houses own-rate of interest affects\\$g_{I_h}$ in the short-run\end{tabular} \\ \hline
@@ -41,7 +41,7 @@
 				$g_{I_h}$ effects over houses own-rate of\\interest are negligible\end{tabular} \\ \hline\hline
 		\end{tabular}%
 		\begin{tablenotes}\footnotesize
-		  \item [a] In the estimation results provided in Table \ref{tab:Estimacao} both $\phi_0$ and $\phi_1$ should be interpreted with the opposite sign reported here.
+		  \item [a] In the estimation results provided in Table \ref{Estimacao} both $\phi_0$ and $\phi_1$ should be interpreted with the opposite sign reported here.
 \end{tablenotes}
 	  	\end{threeparttable}
 	}
