--- a/Articles/VECM/Conclusion.org
+++ b/Articles/VECM/Conclusion.org
@@ -2,18 +2,19 @@
 
 In this article, we present a parsimonious specification for residential investment growth rate based on houses own-rate of interest proposed by textcite:teixeira_crescimento_2015.
 Considering this index, we estimate a bi-variate VEC model for the US economy from 1992 to 2019.
-We base the sample and lag order selection both on econometric and economic criterias.
+We base the sample and lag order selection both on econometric and economic criteria.
 Our results are:
 	(i) houses own-rate of interest ($own$) and residential investment growth rate ($g_{I_h}$) share a common long-run trend;
-	(ii) $g_{I_h}$ effects over $own$ are negligible and; 
-	(iii) houses own-rate of interest has a negative effect on $g_{I_h}$ and it is its main determinant.
+	(ii) residential investment growth rate effects over $own$ are negligible and;
+	(iii) houses own-rate of interest has a negative effect on residential investment growth rate and it explains more than a half of its variance after the second quarter.
 Our estimations does not show residuals serial autocorrelation nor heteroscedasticity.
-Additionally, the results are not sensible to lag order specification and most expected results remain valid in a economically relevant time horizon.
+Additionally, the results are not sensible to lag order specification and most of the expected results remain valid in a economically relevant time horizon.
 
 In summary, our results contributes to a better understanding on the financial determinants of residential investment.
-The proposed index clarify the connection between asset price inflation (in this case house prices) and aggregate demand through residential investment, extending textcite:petrini_2021_TD and textcite:teixeira_crescimento_2015 works to an empirical direction.
-From a policy making perspective, our findings highlight the relevance to go beyond LTV cap recommendations and analyse how house prices, credit grant, residential investment e economic performance are related.
-In other words, macroeconomic models that does not explicitly include residential investment and its determinants may capture just one part of the story.
+The proposed index specify  a way to connect asset price inflation  and aggregate demand.
+In this particular case, house prices and residential investment, extending textcite:petrini_2021_TD and textcite:teixeira_crescimento_2015 works to an empirical direction.
+From a policy making perspective, our findings highlight the relevance to go beyond LTV cap recommendations and analyze how house prices, credit grant, residential investment and economic performance are related.
+In other words, macroeconomic models that do not explicitly include residential investment and its determinants may capture just one part of the story.
 
 This paper is just a step towards an broad and emerging macroeconomic housing agenda.
 Further studies could evaluate whether or not houses own-rate of interest validity is restricted to the US economy.
