--- a/Articles/VECM/Stylized_Facts.org
+++ b/Articles/VECM/Stylized_Facts.org
@@ -170,11 +170,6 @@ def salvar_grafico(file_name, extension="png", pasta="./figs/"):
 
 #+RESULTS:
 :results:
-/home/gpetrini/.local/lib/python3.8/site-packages/pandas/core/indexing.py:670: SettingWithCopyWarning:
-A value is trying to be set on a copy of a slice from a DataFrame
-
-See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy
-  iloc._setitem_with_indexer(indexer, value)
 :end:
 
 ** Endividamento das famílias e preço dos imóveis
@@ -748,9 +743,6 @@ ggsave(
 )
 #+end_src
 
-#+RESULTS:
-[[file:./figs/Centered_Begin_pct1.png]]
-
 
 
 
@@ -894,15 +886,15 @@ Specifically, we argue however small its share on GDP is, it does have a fundame
 #+end_comment
 * Housing Dynamics and Business Cycle in the US Economy :ignore:
 
-Usually, economists did not pay a systematic attention to the role of residential investment to macroeconomic dynamics.
+Usually, economists had not payed a systematic attention to the role of residential investment to macroeconomic dynamics.
 One possible explanation for this could be the small share of residential investment on aggregate demand (see Figure ref:fig:share).
 Recently, this lack of attention has been replaced by a better understanding of its macroeconomic relevance.
 In this Section, we will present some stylized facts regarding the relevance of residential investment for the US economy.
 
-There are, nevertheless, two notable exceptions.
-In a letter to President Franklin D. Roosevelt, in the mid of the Great Depression, Keynes presented the case of housing as the best aid to fight the crisis and to foster economic recovery \cite[p.~436]{keynes_collected_1978}.
-The other exception is textcite:duesenberry_investment_1958 who criticizes ordinary theories of aggregate investment because they put firms’ investment in capital and structures together with residential investment.
-In this sense, he proposes a model dedicated for the latter type of investment, emphasizing the role of house prices.
+There are, nevertheless, two notable exceptions to this inattention.
+In a letter to President Franklin D. Roosevelt, in the mid of the Great Depression, \textcite[p.~436]{keynes_collected_1978} presented the case of housing as the best aid to fight the crisis and to foster economic recovery.
+The other exception is textcite:duesenberry_investment_1958 who criticizes ordinary theories of aggregate investment because they put firms’ investment in equipments and structures together with residential investment.
+In this sense, he proposes a theoretical model dedicated for the latter type of investment, emphasizing the role of house prices.
 
 
 #+begin_export latex
@@ -916,16 +908,14 @@ In this sense, he proposes a model dedicated for the latter type of investment, 
 	\caption*{\textbf{Source:} U.S. Bureau of Economic Analysis, Authors' Elaboration}
 \end{figure}
 #+end_export
-
-After a long time, the interest in residential investment has been limited to the business cycles agenda.
-textcite:green_follow_1997 analyzed the connection between residential investment and business cycle even before the Great Recession.
+After this period of negligence, some authors started to draw attention to the relevance of residential investment in explaining the business cycle, as in textcite:green_follow_1997.
 Based on Granger causality tests for the US from 1952 to 1992, he concludes that residential investment leads the business cycle, while non-residential investment lags it.
 textcite:green_follow_1997 relates this result to a forward-looking behavior of households.
 Thus, he restricts the relevance of residential investment as a temporal precedence indicator.
 
 textcite:leamer_housing_2007 is more incisive and states that housing is the business cycle.
-In analyzing the US economy for the post-war period, he concludes that residential investment is the best predictor of economic crises.
-In a follow up work, the author declares that nine out of eleven US post-war economic recessions were preceded by a severe downturn of residential investment cite:leamer_housing_2015.
+In analyzing the US economy for the post-war period, he concludes that residential investment is the best predictor of economic recession.
+In a subsequent work, textcite:leamer_housing_2015 declares that nine out of eleven US post-war economic recessions were preceded by a severe downturn of residential investment.
 # Thus, according to textcite:leamer_housing_2007, residential investment anticipates and causes the business cycle[fn::However, textcite:leamer_housing_2007 him self did not evaluate this statements econometrically.].
 textcite:kydland_2016_housing expand \citeauthor*{leamer_housing_2007}'s \citeyear{leamer_housing_2007} proposition to other countries to evaluate how unique the US case is.
 Similarly to textcite:green_follow_1997, they also conclude that residential investment leads the business cycle -- while non-residential investment lags it -- for the US and Canada.
@@ -936,15 +926,15 @@ For the US both statements are valid and housing related variables (house prices
 
 
 In order to depict the relation between residential investment and business cycle, we present Figure ref:fig:cycle.
-In each panel, we present the growth rate of selected expenditures two years before and two years after recession starts.
-In most of them, residential investment growth rate is negative before a recession starts.
+In each subplot, we present the growth rate of selected expenditures two years before and two years after recession starts.
+In most of them, residential investment growth rate is negative before the begining of the recession.
 The Great Recession is a remarkable example of this pattern while the dot-com crisis (2000-1) is an exception as already pointed out by textcite:leamer_housing_2007.
 
 
 #+begin_export latex
 \begin{figure}[H]
 	\centering
-	\caption{Selected expenditures growth rates two years before and two years after recession starts\\Vertical lines indicates recession start (NBER recession dating procedure)}
+	\caption{Selected expenditures growth rates two years before and two years after recession starts\\Vertical lines indicate the begining of the recession (NBER recession dating procedure)}
 	\label{fig:cycle}
 	\includegraphics[width=\textwidth]{./figs/Centered_Begin_pct1.png}
 	\caption*{\textbf{Source:} U.S. Bureau of Economic Analysis, Authors' Elaboration}
@@ -958,7 +948,7 @@ Talvez discutir preço aqui
 
 In a heterodox perspective, textcites:fiebiger_semi-autonomous_2018,fiebiger_trend_2017 present residential investment as a Luxemburg-type external market providing a source of autonomous demand to absorb economic surplus.
 textcite:teixeira_crescimento_2015 includes both residential investment  and durables goods consumption in the Sraffian supermultiplier framework to explain the recent US housing bubble episode.
-Additionally, in his work houses price and mortgages interest rate are the main determinant of the former.
+Additionally, in his work houses price and mortgages interest rate are the main determinant of residential investment.
 Those works state its role (together with debt-financed consumption) in inducing non-residential investment and driving output growth, during the business cycle as well as in the long-run.
 Figure ref:fig:trend presents the trend of GDP and residential investment growth rate by estimating a HP filter[fn::It worth noting that Figure ref:fig:trend is just a visualization procedure. We are aware of the econometric problems regarding this type of filter. For details see textcite:NBER_HP.].
 Both series share a correlational relation in which residential investment growth rate is more volatile than GDP growth rate.
@@ -979,7 +969,7 @@ Similar to textcite:girardi_long-run_2016, they do not report any relevant feedb
 Before we move forward, it is worth mentioning that the relevance of housing is not restricted to its implications to growth and business cycles neither limited to residential investment related variables.
 For example, textcite:jorda_great_2016 report that credit and financial sector growth has been led mainly by mortgages. 
 textcite:kohl_more_2018 presents a historical perspective in which banking activities were majorly redirected to households and housing.
-Other studies have shown that house price inflation is one of the main determinants of household indebtedness, distribution of wealth and that it has implications for macroeconomic stability cites:ryoo_household_2015,stockhammer_debt-driven_2016,barnes_private_2016,johnston_global_2017,mian_household_2017,anderson_politics_2020,fuller_housing_2020.
+Other studies have shown that house price inflation is one of the main determinants of household indebtedness, wealth distribution and that it has implications for macroeconomic stability cites:stockhammer_debt-driven_2016,johnston_global_2017,mian_household_2017,fuller_housing_2020.
 In summary, what we intended to show was the macroeconomic relevance of residential investment.
 On the following section, we analyze how econometric literature has dealt with its determinants.
 
